--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing",
+  "name": "hospis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.14",
     "react-scroll-shadow": "^2.0.2",
     "styled-components": "^4.4.1"
